--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="light" lang="tr"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Tweet Battle Welcome Screen</title>
+<title>Tweet Battle - Welcome</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <script src="translations.js"></script>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
