--- a/game.html
+++ b/game.html
@@ -144,7 +144,7 @@
   </style>
   </head>
 <body class="font-display overflow-hidden">
-<div class="relative flex w-full flex-col bg-gradient-to-b from-[#E8F5FD] to-background-light dark:from-[#101b22] dark:to-[#101b22] group/design-root overflow-x-hidden" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif; height: 100dvh; min-height: 100dvh; max-height: 100dvh;'>
+<div class="relative flex w-full flex-col bg-gradient-to-b from-[#E8F5FD] to-background-light dark:from-[#101b22] dark:to-[#101b22] group/design-root overflow-x-hidden" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif; height: 100dvh; min-height: 100dvh; max-height: 100dvh; overflow: hidden; display: flex; flex-direction: column;'>
 <!-- Top App Bar -->
 <div class="relative flex flex-col items-center p-4 pb-2 justify-center bg-transparent">
 <!-- Back Button -->
@@ -157,7 +157,7 @@
 </span>
 <h1 class="text-[#0d161c] dark:text-white tracking-tight text-[32px] font-extrabold leading-tight">Tweet Battle</h1>
 </div>
-<main class="relative flex flex-col flex-1 px-4 py-6 gap-4 min-h-0 overflow-hidden">
+<main class="relative flex flex-col flex-1 px-4 py-6 gap-4 min-h-0" style="flex: 1 1 0%; overflow-y: auto; -webkit-overflow-scrolling: touch; max-height: calc(100dvh - 200px);">
 <!-- First Tweet Card (Visible Stats) -->
 <div id="topTweetCard" class="tweet-card flex flex-col items-stretch rounded-lg bg-white dark:bg-background-dark shadow-sm" style="flex: 1 1 0%; min-height: 0;">
 <div class="tweet-content-scrollable px-4 pt-2">
@@ -232,7 +232,7 @@
 <h3 class="text-text-light-secondary dark:text-text-dark-secondary text-lg font-semibold leading-tight"><span id="highScoreLabel">Rekor</span>: <span id="highScoreDisplay">0</span></h3>
 </div>
 <!-- Action Buttons -->
-<footer class="sticky bottom-0 p-4 pb-safe bg-transparent backdrop-blur-sm" style="padding-bottom: max(1rem, env(safe-area-inset-bottom));">
+<footer class="flex-shrink-0 p-4 bg-transparent backdrop-blur-sm" style="padding-bottom: max(1rem, env(safe-area-inset-bottom)); margin-top: auto;">
 <div class="flex flex-1 gap-4 justify-between">
 <button id="lowerButton" class="flex flex-1 min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-14 px-5 bg-primary/20 dark:bg-primary/30 text-primary text-lg font-bold leading-normal tracking-[0.015em] gap-2 transition-transform hover:scale-105 active:scale-95">
 <span class="material-symbols-outlined">arrow_downward</span>
