--- a/gameover.html
+++ b/gameover.html
@@ -72,7 +72,7 @@
 </div>
 
 <!-- Game Over Content -->
-<div class="flex flex-col items-center justify-center flex-1 px-4 py-8 overflow-hidden">
+<div class="flex flex-col items-center justify-center flex-1 px-4 py-8 overflow-hidden pb-24">
 <div class="flex flex-col items-center gap-8 w-full max-w-md">
 <!-- Game Over Icon -->
 <div class="w-24 h-24 rounded-full bg-red-50 dark:bg-red-900/20 flex items-center justify-center shadow-lg">
@@ -105,7 +105,7 @@
 </div>
 
 <!-- Play Again Button -->
-    <footer class="sticky bottom-0 p-4 pb-[calc(1rem+env(safe-area-inset-bottom))] bg-transparent backdrop-blur-sm">
+    <footer class="sticky bottom-0 p-4 bg-transparent backdrop-blur-sm" style="padding-bottom: max(1.5rem, calc(1.5rem + env(safe-area-inset-bottom, 40px)));">
 <div class="flex flex-1 gap-4 justify-between">
 <button id="playAgainButton" class="flex flex-1 min-w-[84px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-14 px-5 bg-primary text-white text-lg font-bold leading-normal tracking-[0.015em] transition-transform hover:scale-105 active:scale-95">
 <span class="truncate">Tekrar Oyna</span>
