--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <button id="languageToggle" class="absolute top-4 right-4 flex items-center justify-center min-w-[48px] h-10 rounded-full bg-white dark:bg-background-dark shadow-sm hover:bg-gray-100 dark:hover:bg-slate-700 transition-colors cursor-pointer z-10 px-3">
 <span id="languageText" class="text-sm font-bold text-text-light-primary dark:text-text-dark-primary">TR</span>
 </button>
-<main class="flex flex-1 flex-col items-center justify-between p-6 sm:p-8">
+<main class="flex flex-1 flex-col items-center justify-between p-6 sm:p-8 overflow-y-auto min-h-0">
 <div class="flex-grow"></div>
 <div class="flex flex-col items-center text-center w-full max-w-md">
 <span class="material-symbols-outlined text-5xl text-primary mb-4" data-icon="swords">
