--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     }
   </style>
   </head>
-<body class="font-display overflow-hidden">
-<div class="relative flex h-screen w-full flex-col group/design-root overflow-x-hidden bg-gradient-to-b from-primary/10 via-background-light to-background-light dark:from-primary/10 dark:via-background-dark dark:to-background-dark text-[#0d161c] dark:text-background-light">
+<body class="font-display">
+<div class="relative flex min-h-screen w-full flex-col group/design-root overflow-x-hidden bg-gradient-to-b from-primary/10 via-background-light to-background-light dark:from-primary/10 dark:via-background-dark dark:to-background-dark text-[#0d161c] dark:text-background-light">
 <!-- Language Toggle Button -->
 <button id="languageToggle" class="absolute top-4 right-4 flex items-center justify-center min-w-[48px] h-10 rounded-full bg-white dark:bg-background-dark shadow-sm hover:bg-gray-100 dark:hover:bg-slate-700 transition-colors cursor-pointer z-10 px-3">
 <span id="languageText" class="text-sm font-bold text-text-light-primary dark:text-text-dark-primary">TR</span>
