Fix mobile navbar

--- a/gameover.html
+++ b/gameover.html
@@ -66,8 +66,8 @@
 <body class="font-display overflow-hidden">
 <div class="relative flex h-screen w-full flex-col bg-gradient-to-b from-[#E8F5FD] to-background-light dark:from-[#101b22] dark:to-[#101b22] group/design-root overflow-x-hidden" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif; height: 100svh;'>
 <!-- Top App Bar -->
-<div class="flex flex-col items-center p-4 pb-2 justify-center bg-transparent">
-<span class="material-symbols-outlined text-4xl text-primary mb-2" data-icon="swords">
+<div class="flex flex-row items-center justify-center gap-2 p-4 pb-2 bg-transparent">
+<span class="material-symbols-outlined text-4xl text-primary" data-icon="swords">
     swords
 </span>
 <h1 class="text-[#0d161c] dark:text-white tracking-tight text-[32px] font-extrabold leading-tight">Tweet Battle</h1>
