--- a/game.html
+++ b/game.html
@@ -132,13 +132,13 @@
 <body class="font-display overflow-hidden">
 <div class="relative flex h-screen w-full flex-col bg-gradient-to-b from-[#E8F5FD] to-background-light dark:from-[#101b22] dark:to-[#101b22] group/design-root overflow-x-hidden" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif; height: 100svh;'>
 <!-- Top App Bar -->
-<div class="relative flex flex-col items-center p-4 pb-2 justify-center bg-transparent">
+<div class="relative flex flex-row items-center justify-center gap-2 p-4 pb-2 bg-transparent">
 <!-- Back Button -->
 <button id="backButton" class="absolute left-4 top-4 flex items-center justify-center w-10 h-10 rounded-full bg-white dark:bg-background-dark shadow-sm hover:bg-gray-100 dark:hover:bg-slate-700 transition-colors cursor-pointer">
 <span class="material-symbols-outlined text-2xl text-text-light-primary dark:text-text-dark-primary">arrow_back</span>
 </button>
 
-<span class="material-symbols-outlined text-4xl text-primary mb-2" data-icon="swords">
+<span class="material-symbols-outlined text-4xl text-primary" data-icon="swords">
     swords
 </span>
 <h1 class="text-[#0d161c] dark:text-white tracking-tight text-[32px] font-extrabold leading-tight">Tweet Battle</h1>
