Fix gameover layout on mobile

--- a/gameover.html
+++ b/gameover.html
@@ -66,15 +66,15 @@
 <body class="font-display overflow-hidden">
 <div class="relative flex h-screen w-full flex-col bg-gradient-to-b from-[#E8F5FD] to-background-light dark:from-[#101b22] dark:to-[#101b22] group/design-root overflow-x-hidden" style='font-family: "Plus Jakarta Sans", "Noto Sans", sans-serif; height: 100svh;'>
 <!-- Top App Bar -->
-<div class="flex flex-row items-center justify-center gap-2 p-3 pb-10 md:p-4 md:pb-2 bg-transparent">
+<div class="relative flex flex-row items-center justify-center gap-2 p-4 pb-2 bg-transparent">
 <span class="material-symbols-outlined text-4xl text-primary" data-icon="swords">
     swords
 </span>
-<h1 class="text-[#0d161c] dark:text-white tracking-tight text-[32px] font-extrabold leading-tight">Tweet Battle</h1>
+<h1 class="text-[#0d161c] dark:text-white tracking-tight text-[32px] font-bold leading-tight">Tweet Battle</h1>
 </div>
 
 <!-- Game Over Content -->
-<div class="flex flex-col items-center justify-start md:justify-center flex-1 px-4 pt-16 md:pt-6 pb-3 overflow-y-auto min-h-0" style="padding-bottom: env(safe-area-inset-bottom);">
+<div class="flex flex-col items-center justify-start md:justify-center flex-1 px-4 pt-6 md:pt-6 pb-3 overflow-y-auto min-h-0" style="padding-bottom: env(safe-area-inset-bottom);">
 <div class="flex flex-col md:flex-row items-center gap-6 w-full max-w-4xl">
 <!-- Left Side: Icon and Title -->
 <div class="flex flex-col items-center gap-4 md:w-1/2">
